--- a/wild.html
+++ b/wild.html
@@ -9,7 +9,7 @@
 		#block
 		{
 			width: 300px;
-			background-color: black;
+			background-color: gainsboro;
 			margin: 10% auto;
 			padding: 75px 50px 50px 50px;
 			box-shadow: 0 10px 20px grey;
