d07: sql route table integration

--- a/add.html
+++ b/add.html
@@ -13,30 +13,24 @@
 		<label for="_date">Date:</label><br>
 		<input type="date" id="_date" name="_date" value="2020-01-01"><br><br>
 
-		<label for="route_id">Route ID:</label><br>
-		<input type="text" id="route_id" name="route_id" value="1"><br><br>
-
-		<label for="grade">Grade:</label><br>
-		<select id="grade" name="grade">
-			<option value="5.8">5.8</option>
-			<option value="5.9">5.9</option>
-			<option value="5.10a">5.10a</option>
-			<option value="5.10b">5.10b</option>
-			<option value="5.10c">5.10c</option>
-			<option value="5.10d">5.10d</option>
-			<option value="5.11a">5.11a</option>
-			<option value="5.11b">5.11b</option>
-			<option value="5.11c">5.11c</option>
-			<option value="5.11d">5.11d</option>
-			<option value="5.12a">5.12a</option>
-			<option value="5.12b">5.12b</option>
-			<option value="5.12c">5.12c</option>
-			<option value="5.12d">5.12d</option>
+		<label for="route">Route:</label><br>
+		<select id="route" name="route">
+			<option value="10">5.8 Purple</option>
+			<option value="5">5.9 Red</option>
+			<option value="1">5.10a Orange</option>
+			<option value="12">5.10b Yellow</option>
+			<option value="8">5.10c Blue</option>
+			<option value="14">5.10d Blue</option>
+			<option value="4">5.11a Green</option>
+			<option value="7">5.11a Orange</option>
+			<option value="11">5.11a Red</option>
+			<option value="2">5.11b Yellow</option>
+			<option value="3">5.11c Purple</option>
+			<option value="6">5.11d Blue</option>
+			<option value="13">5.11d Green</option>
+			<option value="9">5.12a Green</option>
 		</select><br><br>
 
-		<label for="attempt">Attempt:</label><br>
-		<input type="number" id="attempt" name="attempt" min="1" step="1" value="1"><br><br>
-		
 		<label for="status">Status:</label><br>
 		<select id="status" name="status">
 			<option value="Top">Top</option>
